# lob-latency-project

./: .gitignore  README.md  app.py  requirements.txt
.streamlit/: config.toml
configs/: default.yaml
docs/: design.md  latency-report.md  results.md
engine/: CMakeLists.txt
engine/include/: features.hpp  model_scorer.hpp  ring_buffer.hpp  timing.hpp
engine/src/: bench_latency.cpp  features.cpp  main_replay.cpp  model_scorer.cpp
research/: 00_make_synth_data.py  10_train_logreg.py  20_export_onnx.py  30_backtest.py  utils_backtest.py  utils_data.py
scripts/: collect_binance_l2.py  export_linear_weights.py  load_fi2010.py
